Added benefits container

--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -16,13 +16,14 @@
   </head>
 
   <body> 
-    <div
+     <div
     class="sale-wrapper">
     <a href="#">
     <span>Free Courses. Sale Ends Soon, Get It Now</span>
       <img src="./assets/icons/header-arrow.svg" alt="arrow icon"/>
     </a>
-  </div>
+    </div>
+
     <header>
       <div class="container">
 
@@ -135,6 +136,95 @@
 
         <div class="index-main-image">
           <img src="./assets/images/index-main-top.png" alt="Image">
+        </div>
+
+        <div class="benefits-container">
+          <div class="wrapper">
+            <div class="text-container">
+              <h2>Benefits</h2>
+              <p>Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.</p>
+            </div>
+
+            <button>View All</button>
+          </div>
+
+          <div class="card-container">
+            <div class="card">
+              <h1>1</h1>
+              <div class="text-container">
+                <h5>Flexible Learning Schedule</h5>
+                <p>Fit your coursework around your existing commitments and obligations.</p>
+              </div>
+              <div class="arrow-img">
+                <a href="#">
+                <img src="./assets/icons/main-benefits-arrow.svg" alt="arrow icon">
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <h1>2</h1>
+              <div class="text-container">
+                <h5>Expert Instruction</h5>
+                <p>Learn from industry experts who have hands-on experience in design and development.</p>
+              </div>
+              <div class="arrow-img">
+                <a href="#">
+                <img src="./assets/icons/main-benefits-arrow.svg" alt="arrow icon">
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <h1>3</h1>
+              <div class="text-container">
+                <h5>Diverse Course Offerings</h5>
+                <p>Explore a wide range of design and development courses covering various topics.</p>
+              </div>
+              <div class="arrow-img">
+                <a href="#">
+                <img src="./assets/icons/main-benefits-arrow.svg" alt="arrow icon">
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <h1>4</h1>
+              <div class="text-container">
+                <h5>Updated Curriculum</h5>
+                <p>Access courses with up-to-date content reflecting the latest trends and industry practices.</p>
+              </div>
+              <div class="arrow-img">
+                <a href="#">
+                <img src="./assets/icons/main-benefits-arrow.svg" alt="arrow icon">
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <h1>5</h1>
+              <div class="text-container">
+                <h5>Practical Projects and Assignments</h5>
+                <p>Develop a portfolio showcasing your skills and abilities to potential employers.</p>
+              </div>
+              <div class="arrow-img">
+                <a href="#">
+                <img src="./assets/icons/main-benefits-arrow.svg" alt="arrow icon">
+                </a>
+              </div>
+            </div>
+            <div class="card">
+              <h1>6</h1>
+              <div class="text-container">
+                <h5>Interactive Learning Environment</h5>
+                <p>Collaborate with fellow learners, exchanging ideas and feedback to enhance your understanding.</p>
+              </div>
+              <div class="arrow-img">
+                <a href="#">
+                <img src="./assets/icons/main-benefits-arrow.svg" alt="arrow icon">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="courses-container">
         </div>
 
       </div>
