Added Courses container

--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -225,6 +225,163 @@
         </div>
 
         <div class="courses-container">
+
+          <div class="wrapper">
+            <div class="text-container">
+              <h2>Our Courses</h2>
+              <p>Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.</p>
+            </div>
+
+            <button>View All</button>
+          </div>
+
+          <div class="card-container">
+            <div class="card">
+              <div class="img-container">
+                <img src="./assets/images/index-courses-image-1.png" alt="image">
+              </div>
+
+              <div class="user-container">
+                <div class="exp-container">
+                  <p>4 Weeks</p>
+                  <p>Beginner</p>
+                </div>
+
+                <h6>By John Smith</h6>
+
+              </div>
+
+              <div class="text-container">
+                <h4>Web Design Fundamentals</h4>
+                <p>Learn the fundamentals of web design, including HTML, CSS, and responsive design principles. Develop the skills to create visually appealing and user-friendly websites.</p>
+              </div>
+
+              <button>Get it Now</button>
+
+            </div>
+
+            <div class="card">
+              <div class="img-container">
+                <img src="./assets/images/index-courses-image-2.png" alt="image">
+              </div>
+
+              <div class="user-container">
+                <div class="exp-container">
+                  <p>6 Weeks</p>
+                  <p>Intermediate</p>
+                </div>
+
+                <h6>By Emily Johnson</h6>
+
+              </div>
+
+              <div class="text-container">
+                <h4>UI/UX Design</h4>
+                <p>Master the art of creating intuitive user interfaces (UI) and enhancing user experiences (UX). Learn design principles, wireframing, prototyping, and usability testing techniques.</p>
+              </div>
+
+              <button>Get it Now</button>
+
+            </div>
+
+            <div class="card">
+              <div class="img-container">
+                <img src="./assets/images/index-courses-image-3.png" alt="image">
+              </div>
+
+              <div class="user-container">
+                <div class="exp-container">
+                  <p>8 Weeks</p>
+                  <p>Intermediate</p>
+                </div>
+
+                <h6>By David Brown</h6>
+
+              </div>
+
+              <div class="text-container">
+                <h4>Mobile App Development</h4>
+                <p>Dive into the world of mobile app development. Learn to build native iOS and Android applications using industry-leading frameworks like Swift and Kotlin.</p>
+              </div>
+
+              <button>Get it Now</button>
+
+            </div>
+
+            <div class="card">
+              <div class="img-container">
+                <img src="./assets/images/index-courses-image-4.png" alt="image">
+              </div>
+
+              <div class="user-container">
+                <div class="exp-container">
+                  <p>10 Weeks</p>
+                  <p>Beginner</p>
+                </div>
+
+                <h6>By Sarah Thompson</h6>
+
+              </div>
+
+              <div class="text-container">
+                <h4>Graphic Design for Beginners</h4>
+                <p>Discover the fundamentals of graphic design, including typography, color theory, layout design, and image manipulation techniques. Create visually stunning designs for print and digital media.</p>
+              </div>
+
+              <button>Get it Now</button>
+
+            </div>
+
+            <div class="card">
+              <div class="img-container">
+                <img src="./assets/images/index-courses-image-5.png" alt="image">
+              </div>
+
+              <div class="user-container">
+                <div class="exp-container">
+                  <p>10 Weeks</p>
+                  <p>Intermediate</p>
+                </div>
+
+                <h6>By Michael Adams</h6>
+
+              </div>
+
+              <div class="text-container">
+                <h4>Front-End Web Development</h4>
+                <p>Become proficient in front-end web development. Learn HTML, CSS, JavaScript, and popular frameworks like Bootstrap and React. Build interactive and responsive websites.</p>
+              </div>
+
+              <button>Get it Now</button>
+
+            </div>
+
+            <div class="card">
+              <div class="img-container">
+                <img src="./assets/images/index-courses-image-6.png" alt="image">
+              </div>
+
+              <div class="user-container">
+                <div class="exp-container">
+                  <p>6 Weeks</p>
+                  <p>Advance</p>
+                </div>
+
+                <h6>By Jennifer Wilson</h6>
+
+              </div>
+
+              <div class="text-container">
+                <h4>Advanced JavaScript</h4>
+                <p>Take your JavaScript skills to the next level. Explore advanced concepts like closures, prototypes, asynchronous programming, and ES6 features. Build complex applications with confidence.</p>
+              </div>
+
+              <button>Get it Now</button>
+
+            </div>
+
+          </div>
+
         </div>
 
       </div>
