--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -384,6 +384,212 @@
 
         </div>
 
+        <div class="testimonials-container">
+          <div class="wrapper">
+            <div class="text-container">
+              <h2>Our Testimonials</h2>
+              <p>Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.</p>
+            </div>
+
+            <button>View All</button>
+          </div>
+
+          <div class="card-container">
+            <div class="card">
+              <p>The web design course provided a solid foundation for me. The instructors were knowledgeable and supportive, and the interactive learning environment was engaging. I highly recommend it!</p>
+              <div class="user-container">
+                <div class="left-side">
+                  <div class="user-image">
+                  <img src="./assets/images/testimonials-user-image-1.png" alt="user image">
+                  </div>
+
+                  <h4>Sarah L</h4>
+                </div>
+                  <button>Read Full Story</button>
+              </div>
+            </div>
+            <div class="card">
+              <p>The UI/UX design course exceeded my expectations. The instructor's expertise and practical assignments helped me improve my design skills. I feel more confident in my career now. Thank you!</p>
+              <div class="user-container">
+                <div class="left-side">
+                  <div class="user-image">
+                  <img src="./assets/images/testimonials-user-image-2.png" alt="user image">
+                  </div>
+
+                  <h4>Jason M</h4>
+                </div>
+                  <button>Read Full Story</button>
+              </div>
+            </div>
+            <div class="card">
+              <p>The mobile app development course was fantastic! The step-by-step tutorials and hands-on projects helped me grasp the concepts easily. I'm now building my own app. Great course!</p>
+              <div class="user-container">
+                <div class="left-side">
+                  <div class="user-image">
+                  <img src="./assets/images/testimonials-user-image-3.png" alt="user image">
+                  </div>
+
+                  <h4>Emily R</h4>
+                </div>
+                  <button>Read Full Story</button>
+              </div>
+            </div>
+            <div class="card">
+              <p>I enrolled in the graphic design course as a beginner, and it was the perfect starting point. The instructor's guidance and feedback improved my design abilities significantly. I'm grateful for this course!</p>
+              <div class="user-container">
+                <div class="left-side">
+                  <div class="user-image">
+                  <img src="./assets/images/testimonials-user-image-4.png" alt="user image">
+                  </div>
+
+                  <h4>Michael K</h4>
+                </div>
+                  <button>Read Full Story</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="pricing-container">
+          <div class="wrapper">
+            <div class="text-container">
+              <h2>Our Pricing</h2>
+              <p>Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.</p>
+            </div>
+
+            <div class="btn-container">
+              <button>Monthly</button>
+              <button>Yearly</button>
+            </div>
+
+          </div>
+
+          <div class="card-container">
+
+            <div class="card">
+              <h5>Free Plan</h5>
+              <div class="price-wrapper">
+                <h2>$0</h2>
+                <span>/month</span>
+              </div>
+
+              <div class="features-wrapper">
+
+                <p id="A1">Available Features</p>
+                <ul>
+                  <li>
+                    <div class="check-img">
+                      <img src="./assets/icons/features-checkmark.svg" alt="checkmark">
+                    </div>
+                    <p>Access to selected free courses.</p>
+                  </li>
+                  <li>
+                    <div class="check-img">
+                      <img src="./assets/icons/features-checkmark.svg" alt="checkmark">
+                    </div>
+                    <p>Limited course materials and resources.</p>
+                  </li>
+                  <li>
+                    <div class="check-img">
+                      <img src="./assets/icons/features-checkmark.svg" alt="checkmark">
+                    </div>
+                    <p>Basic community support.</p>
+                  </li>
+                  <li>
+                    <div class="check-img">
+                      <img src="./assets/icons/features-checkmark.svg" alt="checkmark">
+                    </div>
+                    <p>No certification upon completion.</p>
+                  </li>
+                  <li>
+                    <div class="check-img">
+                      <img src="./assets/icons/features-checkmark.svg" alt="checkmark">
+                    </div>
+                    <p>Ad-supported platform.</p>
+                  </li>
+                  <li>
+                    <div class="check-img reject">
+                      <img src="./assets/icons/features-reject.svg" alt="checkmark">
+                    </div>
+                    <p>Access to exclusive Pro Plan community forums.</p>
+                  </li>
+                  <li>
+                    <div class="check-img reject">
+                      <img src="./assets/icons/features-reject.svg" alt="checkmark">
+                    </div>
+                    <p>Early access to new courses and updates.</p>
+                  </li>
+
+                </ul>
+
+              </div>
+              <button>Get Started</button>
+
+            </div>
+
+            <div class="card">
+              <h5>Pro Plan</h5>
+              <div class="price-wrapper">
+                <h2>$79</h2>
+                <span>/month</span>
+              </div>
+
+              <div class="features-wrapper">
+
+                <p id="A1">Available Features</p>
+                <ul>
+                  <li>
+                    <div class="check-img">
+                      <img src="./assets/icons/features-checkmark.svg" alt="checkmark">
+                    </div>
+                    <p>Unlimited access to all courses.</p>
+                  </li>
+                  <li>
+                    <div class="check-img">
+                      <img src="./assets/icons/features-checkmark.svg" alt="checkmark">
+                    </div>
+                    <p>Unlimited course materials and resources.</p>
+                  </li>
+                  <li>
+                    <div class="check-img">
+                      <img src="./assets/icons/features-checkmark.svg" alt="checkmark">
+                    </div>
+                    <p>Priority support from instructors.</p>
+                  </li>
+                  <li>
+                    <div class="check-img">
+                      <img src="./assets/icons/features-checkmark.svg" alt="checkmark">
+                    </div>
+                    <p>Course completion certificates.</p>
+                  </li>
+                  <li>
+                    <div class="check-img">
+                      <img src="./assets/icons/features-checkmark.svg" alt="checkmark">
+                    </div>
+                    <p>Ad-free experience.</p>
+                  </li>
+                  <li>
+                    <div class="check-img">
+                      <img src="./assets/icons/features-checkmark.svg" alt="checkmark">
+                    </div>
+                    <p>Access to exclusive Pro Plan community forums.</p>
+                  </li>
+                  <li>
+                    <div class="check-img">
+                      <img src="./assets/icons/features-checkmark.svg" alt="checkmark">
+                    </div>
+                    <p>Early access to new courses and updates.</p>
+                  </li>
+                </ul>
+              </div>
+              <button>Get Started</button>
+
+            </div>
+
+          </div>
+
+        </div>
+
       </div>
     </main>
 
