--- a/Group-A/about.html
+++ b/Group-A/about.html
@@ -33,7 +33,7 @@
 
           <nav>
             <ul>
-              <li class="active">
+              <li>
                 <a href="./index.html">
                   <span>Home</span>
                 </a>
@@ -43,7 +43,7 @@
                   <span>Courses</span>
                 </a>
               </li>
-              <li>
+              <li  class="active">
                 <a href="./about.html">
                   <span>About Us</span>
                 </a>
@@ -102,28 +102,28 @@
         </div>
         <div class="achieve-items">
           <div class="item">
-            <img src="./assets/icons/crown.svg" alt="crown">
+            <img src="./assets/icons/about-crown.svg" alt="crown">
             <h4>Trusted by Thousands</h4>
             <p>We have successfully served thousands of students, helping them unlock their potential and achieve their
               career goals.
             </p>
           </div>
           <div class="item">
-            <img src="./assets/icons/medal.svg" alt="medal">
+            <img src="./assets/icons/about-medal.svg" alt="medal">
             <h4>Award-Winning Courses</h4>
             <p>Our courses have received recognition and accolades in the industry for their quality, depth of content,
               and effective teaching methodologies.
             </p>
           </div>
           <div class="item">
-            <img src="./assets/icons/mask.svg" alt="mask">
+            <img src="./assets/icons/about-mask.svg" alt="mask">
             <h4>Positive Student Feedback</h4>
             <p>We take pride in the positive feedback we receive from our students, who appreciate the practicality and
               relevance of our course materials.
             </p>
           </div>
           <div class="item">
-            <img src="./assets/icons/pack.svg" alt="pack">
+            <img src="./assets/icons/about-pack.svg" alt="pack">
             <h4>Industry Partnerships</h4>
             <p>We have established strong partnerships with industry leaders, enabling us to provide our students with
               access to the latest tools and technologies
@@ -141,28 +141,28 @@
         </div>
         <div class="goals-items">
           <div class="item">
-            <img src="./assets/icons/pack.svg" alt="pack">
+            <img src="./assets/icons/about-pack.svg" alt="pack">
             <h4>Provide Practical Skills</h4>
             <p>We focus on delivering practical skills that are relevant to the current industry demands. Our courses
               are designed to equip learners with the knowledge and tools needed to excel in their chosen field.
             </p>
           </div>
           <div class="item">
-            <img src="./assets/icons/book.svg" alt="book">
+            <img src="./assets/icons/about-book.svg" alt="book">
             <h4>Foster Creative Problem-Solving</h4>
             <p>We encourage creative thinking and problem-solving abilities, allowing our students to tackle real-world
               challenges with confidence and innovation.
             </p>
           </div>
           <div class="item">
-            <img src="./assets/icons/puzzle.svg" alt="puzzle">
+            <img src="./assets/icons/about-puzzle.svg" alt="puzzle">
             <h4>Promote Collaboration and Community</h4>
             <p>We believe in the power of collaboration and peer learning. Our platform fosters a supportive and
               inclusive community where learners can connect, share insights, and grow together.
             </p>
           </div>
           <div class="item">
-            <img src="./assets/icons/beacon.svg" alt="beacon">
+            <img src="./assets/icons/about-beacon.svg" alt="beacon">
             <h4>Stay Ahead of the Curve</h4>
             <p>The digital landscape is constantly evolving, and we strive to stay at the forefront of industry trends.
               We regularly update our course content to ensure our students receive the latest knowledge and skills.
@@ -174,7 +174,7 @@
             <h4><span>Together</span>, let's shape the future of digital innovation</h4>
             <p>Join us on this exciting learning journey and unlock your potential in design and development.</p>
           </div>
-          <img src="./assets/icons/goalsFooter.svg" alt="goalsFooter">
+          <img src="./assets/icons/about-goalsFooter.svg" alt="goalsFooter">
           <button>Join Now</button>
         </div>
       </div>
