--- a/Group-A/courses.html
+++ b/Group-A/courses.html
@@ -6,26 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./courses.css" />
-  <!-- TailwindCDN -->
-  <!-- <script src="https://cdn.tailwindcss.com"></script>  -->
-  <!-- TailwindConfig
-    <script>
-        tailwind.config = {
-          theme: {
-            screens: {
-              sm: "150px",
-              md: "834px",
-              lg: "1200px",
-              xl: "1440px",
-            },
-            extend: {
-              fontFamily: {
-                vietnam: ["Be Vietnam Pro", "sans-serif"],
-              },
-            },
-          },
-        };
-      </script> -->
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -55,12 +35,12 @@
 
           <nav>
             <ul>
-              <li class="active">
+              <li>
                 <a href="./index.html">
                   <span>Home</span>
                 </a>
               </li>
-              <li>
+              <li  class="active">
                 <a href="./courses.html">
                   <span>Courses</span>
                 </a>
@@ -124,9 +104,9 @@
             </button>
           </div>
           <div class="images">
-            <img src="./assets/images/Image.png" alt="1">
-            <img src="./assets/images/Image (1).png" alt="2">
-            <img src="./assets/images/Image (2).png" alt="3">
+            <img src="./assets/images/courses-Image.png" alt="1">
+            <img src="./assets/images/courses-Image (1).png" alt="2">
+            <img src="./assets/images/courses-Image (2).png" alt="3">
           </div>
           <div class="buttons">
             <div class="left">
@@ -175,9 +155,9 @@
             <button>View Course</button>
           </div>
           <div class="images">
-            <img src="./assets/images/Image (3).png" alt="1">
-            <img src="./assets/images/Image (4).png" alt="2">
-            <img src="./assets/images/Image (5).png" alt="3">
+            <img src="./assets/images/courses-Image (3).png" alt="1">
+            <img src="./assets/images/courses-Image (4).png" alt="2">
+            <img src="./assets/images/courses-Image (5).png" alt="3">
           </div>
           <div class="buttons">
             <div class="left">
@@ -226,9 +206,9 @@
             <button>View Course</button>
           </div>
           <div class="images">
-            <img src="./assets/images/Image (6).png" alt="1">
-            <img src="./assets/images/Image (7).png" alt="2">
-            <img src="./assets/images/Image (8).png" alt="3">
+            <img src="./assets/images/courses-Image (6).png" alt="1">
+            <img src="./assets/images/courses-Image (7).png" alt="2">
+            <img src="./assets/images/courses-Image (8).png" alt="3">
           </div>
           <div class="buttons">
             <div class="left">
@@ -277,9 +257,9 @@
             <button>View Course</button>
           </div>
           <div class="images">
-            <img src="./assets/images/Image (9).png" alt="1">
-            <img src="./assets/images/Image (10).png" alt="2">
-            <img src="./assets/images/Image (11).png" alt="3">
+            <img src="./assets/images/courses-Image (9).png" alt="1">
+            <img src="./assets/images/courses-Image (10).png" alt="2">
+            <img src="./assets/images/courses-Image (11).png" alt="3">
           </div>
           <div class="buttons">
             <div class="left">
@@ -328,9 +308,9 @@
             <button>View Course</button>
           </div>
           <div class="images">
-            <img src="./assets/images/Image (12).png" alt="1">
-            <img src="./assets/images/Image (13).png" alt="2">
-            <img src="./assets/images/Image (14).png" alt="3">
+            <img src="./assets/images/courses-Image (12).png" alt="1">
+            <img src="./assets/images/courses-Image (13).png" alt="2">
+            <img src="./assets/images/courses-Image (14).png" alt="3">
           </div>
           <div class="buttons">
             <div class="left">
