--- a/Group-A/pricing.html
+++ b/Group-A/pricing.html
@@ -93,7 +93,7 @@
           <div class="wrapper">
             <div class="text-container">
               <h2>Our Pricing</h2>
-              <p>Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.</p>
+              <p>Welcome to SkillBridge's Pricing Plan page, where we offer two comprehensive options to cater to your needs: Free and Pro. We believe in providing flexible and affordable pricing options for our services. Whether you're an individual looking to enhance your skills or a business seeking professional development solutions, we have a plan that suits you. Explore our pricing options below and choose the one that best fits your requirements.</p>
             </div>
 
             <div class="btn-container">
