--- a/Group-A/courses_open_index.html
+++ b/Group-A/courses_open_index.html
@@ -116,7 +116,7 @@
                   <div id="heading">Importance of User-Centered Design</div>
                   <div id="lesson">Lesson 02</div>
                 </div>
-                <div class="time">
+                <div id="mt-fix" class="time">
                   <img src="./assets/icons/clock.svg" alt="" />
                   <span>1 Hour</span>
                 </div>
@@ -142,17 +142,17 @@
             <div class="feature-items">
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">Understanding UI/UX Design Principles</div>
+                  <div id="heading">Conducting User Research and Interviews</div>
                   <div id="lesson">Lesson 01</div>
                 </div>
                 <div class="time">
                   <img src="./assets/icons/clock.svg" alt="" />
-                  <span>45 Minutes</span>
+                  <span>1 Hour</span>
                 </div>
               </div>
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">Importance of User-Centered Design</div>
+                  <div id="heading">Analyzing User Needs and Behavior</div>
                   <div id="lesson">Lesson 02</div>
                 </div>
                 <div class="time">
@@ -163,7 +163,7 @@
               <div class="feature-item">
                 <div class="item-left-side">
                   <div id="heading">
-                    The Role of UI/UX Design in Product Development
+                    Creating User Personas and Scenarios
                   </div>
                   <div id="lesson">Lesson 03</div>
                 </div>
@@ -181,17 +181,17 @@
             <div class="feature-items">
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">Understanding UI/UX Design Principles</div>
+                  <div id="heading">Introduction to Wireframing Tools and Techniques</div>
                   <div id="lesson">Lesson 01</div>
                 </div>
                 <div class="time">
                   <img src="./assets/icons/clock.svg" alt="" />
-                  <span>45 Minutes</span>
+                  <span>1 Hour</span>
                 </div>
               </div>
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">Importance of User-Centered Design</div>
+                  <div id="heading">Creating Low-Fidelity Wireframes</div>
                   <div id="lesson">Lesson 02</div>
                 </div>
                 <div class="time">
@@ -202,13 +202,13 @@
               <div class="feature-item">
                 <div class="item-left-side">
                   <div id="heading">
-                    The Role of UI/UX Design in Product Development
+                    Prototyping and Interactive Mockups
                   </div>
                   <div id="lesson">Lesson 03</div>
                 </div>
                 <div class="time">
                   <img src="./assets/icons/clock.svg" alt="" />
-                  <span>45 Minutes</span>
+                  <span>1 Hour</span>
                 </div>
               </div>
             </div>
@@ -216,7 +216,7 @@
 
           <div class="card">
             <div id="number">04</div>
-            <div id="introduction">Introduction to UI/UX Design</div>
+            <div id="introduction">Color Theory and Typography in UI Design</div>
             <div class="feature-items">
               <div class="feature-item">
                 <div class="item-left-side">
@@ -225,12 +225,12 @@
                 </div>
                 <div class="time">
                   <img src="./assets/icons/clock.svg" alt="" />
-                  <span>45 Minutes</span>
+                  <span>1 Hour</span>
                 </div>
               </div>
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">Importance of User-Centered Design</div>
+                  <div id="heading">Visual Hierarchy and Layout Design</div>
                   <div id="lesson">Lesson 02</div>
                 </div>
                 <div class="time">
@@ -241,7 +241,7 @@
               <div class="feature-item">
                 <div class="item-left-side">
                   <div id="heading">
-                    The Role of UI/UX Design in Product Development
+                    Creating a Strong Brand Identity
                   </div>
                   <div id="lesson">Lesson 03</div>
                 </div>
@@ -259,18 +259,8 @@
             <div class="feature-items">
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">Understanding UI/UX Design Principles</div>
+                  <div id="heading">Usability Testing Methods and Techniques</div>
                   <div id="lesson">Lesson 01</div>
-                </div>
-                <div class="time">
-                  <img src="./assets/icons/clock.svg" alt="" />
-                  <span>45 Minutes</span>
-                </div>
-              </div>
-              <div class="feature-item">
-                <div class="item-left-side">
-                  <div id="heading">Importance of User-Centered Design</div>
-                  <div id="lesson">Lesson 02</div>
                 </div>
                 <div class="time">
                   <img src="./assets/icons/clock.svg" alt="" />
@@ -279,8 +269,18 @@
               </div>
               <div class="feature-item">
                 <div class="item-left-side">
+                  <div id="heading">Analyzing Usability Test Results</div>
+                  <div id="lesson">Lesson 02</div>
+                </div>
+                <div class="time">
+                  <img src="./assets/icons/clock.svg" alt="" />
+                  <span>45 Minutes</span>
+                </div>
+              </div>
+              <div class="feature-item">
+                <div class="item-left-side">
                   <div id="heading">
-                    The Role of UI/UX Design in Product Development
+                   Iterating and Improving UX Designs
                   </div>
                   <div id="lesson">Lesson 03</div>
                 </div>
