Added dropdown menu to Courses on all pages

--- a/Group-A/courses.html
+++ b/Group-A/courses.html
@@ -41,8 +41,12 @@
                 </a>
               </li>
               <li  class="active">
-                <a href="./courses.html">
+                <a class="courses" href="./courses.html">
                   <span>Courses</span>
+                </a>
+                <a class="courses-open" href="./courses-open.html">
+                  <span>Courses
+                    Open</span>
                 </a>
               </li>
               <li>
