--- a/Group-A/about.html
+++ b/Group-A/about.html
@@ -39,8 +39,12 @@
                 </a>
               </li>
               <li>
-                <a href="./courses.html">
+                <a class="courses" href="./courses.html">
                   <span>Courses</span>
+                </a>
+                <a class="courses-open" href="./courses-open.html">
+                  <span>Courses
+                    Open</span>
                 </a>
               </li>
               <li  class="active">
