Last but not least

--- a/Group-A/courses_open_index.html
+++ b/Group-A/courses_open_index.html
@@ -142,7 +142,9 @@
             <div class="feature-items">
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">Conducting User Research and Interviews</div>
+                  <div id="heading">
+                    Conducting User Research and Interviews
+                  </div>
                   <div id="lesson">Lesson 01</div>
                 </div>
                 <div class="time">
@@ -162,9 +164,7 @@
               </div>
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">
-                    Creating User Personas and Scenarios
-                  </div>
+                  <div id="heading">Creating User Personas and Scenarios</div>
                   <div id="lesson">Lesson 03</div>
                 </div>
                 <div class="time">
@@ -181,7 +181,9 @@
             <div class="feature-items">
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">Introduction to Wireframing Tools and Techniques</div>
+                  <div id="heading">
+                    Introduction to Wireframing Tools and Techniques
+                  </div>
                   <div id="lesson">Lesson 01</div>
                 </div>
                 <div class="time">
@@ -201,9 +203,7 @@
               </div>
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">
-                    Prototyping and Interactive Mockups
-                  </div>
+                  <div id="heading">Prototyping and Interactive Mockups</div>
                   <div id="lesson">Lesson 03</div>
                 </div>
                 <div class="time">
@@ -216,7 +216,9 @@
 
           <div class="card">
             <div id="number">04</div>
-            <div id="introduction">Color Theory and Typography in UI Design</div>
+            <div id="introduction">
+              Color Theory and Typography in UI Design
+            </div>
             <div class="feature-items">
               <div class="feature-item">
                 <div class="item-left-side">
@@ -240,9 +242,7 @@
               </div>
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">
-                    Creating a Strong Brand Identity
-                  </div>
+                  <div id="heading">Creating a Strong Brand Identity</div>
                   <div id="lesson">Lesson 03</div>
                 </div>
                 <div class="time">
@@ -259,7 +259,9 @@
             <div class="feature-items">
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">Usability Testing Methods and Techniques</div>
+                  <div id="heading">
+                    Usability Testing Methods and Techniques
+                  </div>
                   <div id="lesson">Lesson 01</div>
                 </div>
                 <div class="time">
@@ -279,9 +281,7 @@
               </div>
               <div class="feature-item">
                 <div class="item-left-side">
-                  <div id="heading">
-                   Iterating and Improving UX Designs
-                  </div>
+                  <div id="heading">Iterating and Improving UX Designs</div>
                   <div id="lesson">Lesson 03</div>
                 </div>
                 <div class="time">
